# simple_shell

./: .char.c.swp  .envir.c.swp  .execve.c.swp  .loops.c.swk  .loops.c.swl  .loops.c.swm  .loops.c.swn  .loops.c.swo  .loops.c.swp  .main.c.swo  .main.c.swp  .main.h.swo  .main.h.swp  AUTHORS  CMakeLists.txt  README.md  _execve.c  _free.c  _getline.c  _prompt.c  _strcat.c  _strcmp.c  _strcpy.c  _strlen.c  _strtok.c  a.out  char_hand.c  env_hand.c  envir.c  environ.c  execve.c  exit.c  getline.c  hsh  input_tokenizer.c  loops.c  main.c  main.h  print.c  putchar.c  (+9 more)
